--- a/src/app/admin/categories/categories.component.html
+++ b/src/app/admin/categories/categories.component.html
@@ -4,12 +4,12 @@
    <div class="form-group">
       <label for="name" class="col-sm-2 control-label">Navn</label>
       <div class="col-sm-10">
-         <input type="text" formControlName="name" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.name.errors }" />
+         <input type="text" formControlName="name" class="form-control" [ngModel]="category.name" [ngClass]="{ 'is-invalid': submitted && f.name.errors }" />
       </div>
    </div>
    <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
-         <button type="submit" class="btn btn-sm btn-default" >Gem</button>&nbsp;
+         <button type="submit" class="btn btn-sm btn-default">Gem</button>&nbsp;
          <button class="btn btn-sm btn-primary" (click)="clear()">Annuller</button>&nbsp;
 			<div *ngIf="error" class="alert alert-danger mt-3 mb-0">{{error}}</div>
       </div>
